src/objects/Plan_Milestone__c.object
<CustomObject>
    <customHelpPage>Help_Milestone_VF</customHelpPage>
    <fields>
        <fullName>Case_ID__c</fullName>
        <formula>Plan_Goal__r.Plan__r.Case__r.Id</formula>
        <label>Case ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Goal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Goal</description>
        <inlineHelpText>Goal</inlineHelpText>
        <label>Plan Goal</label>
        <referenceTo>Plan_Goal__c</referenceTo>
        <relationshipLabel>Plan Milestones</relationshipLabel>
        <relationshipName>Plan_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <label>Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>Plan Milestones</relationshipLabel>
        <relationshipName>Plan_Milestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <formula>Plan_Goal__r.Plan__r.Case__r.Subject</formula>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <label>Plan Milestone</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encrypted>true</encrypted>
        <label>Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Milestones</pluralLabel>
    <recordTypes>
        <fullName>Closed</fullName>
        <active>true</active>
        <label>Closed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Only_Owner_and_Internal_can_Edit</fullName>
        <active>true</active>
        <description>**丄具슞七풑 妶斏麛좶랒웇쟄颡ꁚ 苻膃炌緄饩怞떦橴鰀 蔵筫踱峬姷됴僦껓쓑 脇麳ꉳ嶓鲭萆菙麴言 尺珸奖췼믵殁勝癃谀 戩滂嘏跐瘋鞁삘퓵圀 塊釚쑭騭燮詐櫃뷖룑 呣늆恊랼昃냠먉쑣쟑 枸씻槬劜워憡滔摑껑 洇隄刈妾牌撕듣ꍄ뿑 裩獊漬峈뽘疍羑惛鄀 蔵筫踱峬姷됴僦껓쓑.&amp;\\ ䷀仄䷀䷀䷈56308!</description>
        <errorConditionFormula>AND 
( 
NOT(ISNEW()),
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;STADD Director&quot;,
$Profile.Name &lt;&gt; &quot;STADD Navigator&quot;,
$Profile.Name &lt;&gt; &quot;STADD Coordinator&quot;,
$Profile.Name &lt;&gt; &quot;STADD Project Administrator&quot;, 
CreatedById &lt;&gt; $User.Id,
Plan__r.Case__r.Owner:User.Id &lt;&gt; $User.Id     
)</errorConditionFormula>
        <errorMessage>Only the record creator or a System Administrator can edit this record.</errorMessage>
    </validationRules>
</CustomObject>